BT Finally figured the corruption out (Processes in windows) Made the projectiles work

--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Levels/Battleground/BattleGround2.BattleGround2
 GameDefaultMap=/Game/Levels/MainMenu/MainMenu.MainMenu
-GlobalDefaultGameMode=/Game/Blueprints/BattleTankGame2_BP.BattleTankGame2_BP_C
+GlobalDefaultGameMode=/Game/Blueprints/BattleTankGame3.BattleTankGame3_C
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
