BT Made Movement for the tank it actually behaves well after adding round collisions. sometimes random terrain collision

--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -48,8 +48,10 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="LeftTrackThrottle",Scale=1.000000,Key=A)
-+AxisMappings=(AxisName="RightTrackThrottle",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Backwards",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Forwards",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Right",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="Left",Scale=1.000000,Key=A)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
